<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EasyA</string>
    <string name="create_question_hint">Ask a question!</string>
    <string name="create_answer_hint">Answer this!</string>
    <string name="create_reply_hint">Reply this!</string>
    <string name="title_hint">Title</string>
    <string name="hint_submit_question">Enter your question</string>
    <string name="hint_submit_answer">Enter your answer</string>
    <string name="menu_sync">Sync</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="sort">Sort</string>
    <string name="sortByNewest">Sort By Newest</string>
    <string name="sortByOldest">Sort By Oldest</string>
    <string name="sortByMostVotes">Sort By Most Votes</string>
    <string name="sortByLeastVotes">Sort By Least Votes</string>
    <string name="sortByPicture">Sort By Has Picture</string>
    <string name="sortByNoPicture">Sort By Has No Picture</string>
    <string name="welcome_username">Username</string>
    <string name="welcome_email">Email</string>
    <string name="welcome_sigin">Sign up</string>
    <string name="search_hint">Search questions and answers</string>
    <string name="search_result">Search results</string>
    <string name="settings_localization">Localization</string>
    <string name="settings_localization_description">Localization settings to be used across the application. Permits you to search content near you. You will decide upon creating content if you want to include your location or not.</string>
    <string name="settings_localization_off">Turn off</string>
    <string name="settings_localization_gps">Use GPS</string>
    <string name="settings_localization_gps_description">Your GPS location will be fetched whenever needed. If your location is not accurate, you can hit the update button above to update it immediately.</string>
    <string name="settings_localization_select">Select manually</string>
    <string name="settings_localization_select_hint">Enter the name of the closest city</string>
    <string name="menu_settings">Settings</string>
    <string name="submit_text">SUBMIT</string>
    <string-array name="app_folders">
        <item>Home</item>
        <item>Favourites</item>
        <item>My questions</item>
        <item>Saved questions</item>
        <item>Log out</item>
    </string-array>
</resources>
