<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_sync"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/sync"/>
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:title=""/>
     <item
        android:id="@+id/menu_sortByNewest"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/sortByNewest"/>
     <item
        android:id="@+id/menu_sortByOldest"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/sortByOldest"/>
     <item
        android:id="@+id/menu_sortByMostVotes"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/sortByMostVotes"/>
     <item
        android:id="@+id/menu_sortByLeastVotes"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/sortByLeastVotes"/>
</menu>
