<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp" >
    <TextView 
        android:id="@+id/settings_location_tracker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:text="@string/settings_localization"/>
    <TextView 
        android:id="@+id/settings_location_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/settings_location_tracker"
        android:text="@string/settings_localization_description"/>
	<RadioGroup
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/settings_location_description"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="5dp">
	    <RadioButton 
	        android:id="@+id/settings_location_off"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_localization_off"
			android:onClick="onSettingsLocationClicked"/>
	    <RadioButton 
	        android:id="@+id/settings_location_GPS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_localization_gps"
			android:onClick="onSettingsLocationClicked"/>
	    	<RelativeLayout 
	    	    android:id="@+id/settings_location_gps_box"
	    	    android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp">
				<ImageView 
				    android:id="@+id/settings_location_gps_location_refresh"
				    android:layout_width="wrap_content"
					android:layout_height="30dp"
					android:layout_alignParentTop="true"
					android:layout_alignParentRight="true"
					android:src="@drawable/ic_action_refresh"
					android:onClick="onGpsRefreshClicked"/>
				<TextView 
				    android:id="@+id/settings_location_gps_location"
				    android:layout_width="wrap_content"
					android:layout_height="30dp"
					android:layout_alignParentTop="true"
					android:layout_alignParentLeft="true"
					android:gravity="center_vertical"
					android:layout_toLeftOf="@id/settings_location_gps_location_refresh"
					android:text="Current: Edmonton, AB"
					android:textStyle="italic"/>
				<TextView 
				    android:id="@+id/settings_location_gps_description"
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/settings_location_gps_location"
					android:text="@string/settings_localization_gps_description"
					android:textStyle="italic"/>
			</RelativeLayout>
	    <RadioButton 
	        android:id="@+id/settings_location_select"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_localization_select"
			android:onClick="onSettingsLocationClicked"/>
	    <RelativeLayout
        	android:id="@+id/settings_location_select_box"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<ImageView 
			    android:id="@+id/settings_location_select_search"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"	
				android:layout_alignParentTop="true"
				android:layout_alignParentRight="true"
			    android:src="@drawable/action_search"
			    android:onClick="onSelectAddress"/>	
	        <EditText 
	            android:id="@+id/settings_location_select_input"
	            android:layout_width="match_parent"
				android:layout_height="wrap_content"	
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_toLeftOf="@id/settings_location_select_search"			
            	android:imeOptions="actionSearch"   
            	android:inputType="text"
            	android:maxLines="1"         	
				android:hint="@string/settings_localization_select_hint"/>
	        <TextView 
			    android:id="@+id/settings_location_select_city"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_below="@id/settings_location_select_search"
				android:textStyle="italic"/>
	    </RelativeLayout>
	</RadioGroup>
</RelativeLayout>
